--- a/Hospital_Management_System/Views/Patient/UpdatePatient.cshtml
+++ b/Hospital_Management_System/Views/Patient/UpdatePatient.cshtml
@@ -1,22 +1,22 @@
 ﻿@model CommonLayer.Model.PatientModel
 
 @{
-    ViewData["Title"] = "RegisterPatient";
+    ViewData["Title"] = "UpdatePatient";
 }
 
-<h1>RegisterPatient</h1>
+<h1>UpdatePatient</h1>
 
 <h4>PatientModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="RegisterPatient">
+        <form asp-action="UpdatePatient">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-           @*  <div class="form-group">
+            <div class="form-group">
                 <label asp-for="PatientId" class="control-label"></label>
                 <input asp-for="PatientId" class="form-control" />
                 <span asp-validation-for="PatientId" class="text-danger"></span>
-            </div> *@
+            </div>
             <div class="form-group">
                 <label asp-for="FullName" class="control-label"></label>
                 <input asp-for="FullName" class="form-control" />
@@ -61,8 +61,8 @@
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsTrash" /> @Html.DisplayNameFor(model => model.IsTrash)
                 </label>
-            </div> *@
-           @*  <div class="form-group">
+            </div>
+            <div class="form-group">
                 <label asp-for="CreatedAt" class="control-label"></label>
                 <input asp-for="CreatedAt" class="form-control" />
                 <span asp-validation-for="CreatedAt" class="text-danger"></span>
@@ -73,7 +73,7 @@
                 <span asp-validation-for="UpdatedAt" class="text-danger"></span>
             </div> *@
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
