--- a/Hospital_Management_System/Views/Patient/GetAllPatients.cshtml
+++ b/Hospital_Management_System/Views/Patient/GetAllPatients.cshtml
@@ -70,7 +70,7 @@
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DOB)
+                    @item.DOB.ToString("d")
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Age)
