--- a/Hospital_Management_System/Views/Doctor/FetchByDoctorId.cshtml
+++ b/Hospital_Management_System/Views/Doctor/FetchByDoctorId.cshtml
@@ -103,6 +103,10 @@
     </dl>
 </div>
 <div>
+    @if (Context.Session.GetInt32("PatientId") > 0)
+    {
+        <a asp-area="" class="btn btn-primary" asp-controller="Appointment" asp-action="CreateAppointment">Make Appointment</a>
+    }
     @Html.ActionLink("Details", "FetcByDoctord", new { id = Model.Doctor_Id  }) |
     <a asp-action="FetchAllDoctors">Back to List</a>
 </div>
