--- a/Hospital_Management_System/Views/Patient/GetByPatientId.cshtml
+++ b/Hospital_Management_System/Views/Patient/GetByPatientId.cshtml
@@ -85,6 +85,7 @@
     </dl>
 </div>
 <div>
+    <a asp-area="" class="btn btn-primary" asp-controller="Doctor" asp-action="FetchAllDoctors">Doctor Details</a>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="GetAllPatients">Back to List</a>
 </div>
