--- a/Hospital_Management_System/Views/Appointment/CreateAppointment.cshtml
+++ b/Hospital_Management_System/Views/Appointment/CreateAppointment.cshtml
@@ -1,4 +1,5 @@
 ﻿@model CommonLayer.Model.AppointmentModel
+@using Microsoft.AspNetCore.Http
 
 @{
     ViewData["Title"] = "CreateAppointment";
@@ -19,12 +20,12 @@
             </div> *@
             <div class="form-group">
                 <label asp-for="Doctor_Id" class="control-label"></label>
-                <input asp-for="Doctor_Id" class="form-control" />
+                <input asp-for="Doctor_Id" class="form-control" value=@Context.Session.GetInt32("Doctor_Id") readonly />
                 <span asp-validation-for="Doctor_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PatientId" class="control-label"></label>
-                <input asp-for="PatientId" class="form-control" />
+                <input asp-for="PatientId" class="form-control" value=@Context.Session.GetInt32("PatientId") readonly />
                 <span asp-validation-for="PatientId" class="text-danger"></span>
             </div>
             <div class="form-group">
