--- a/Hospital_Management_System/Views/Doctor/LoginDoctor.cshtml
+++ b/Hospital_Management_System/Views/Doctor/LoginDoctor.cshtml
@@ -1,16 +1,16 @@
 ﻿@model CommonLayer.Model.LoginModel
 
 @{
-    ViewData["Title"] = "LoginPatient";
+    ViewData["Title"] = "LoginDoctor";
 }
 
-<h1>LoginPatient</h1>
+<h1>LoginDoctor</h1>
 
 <h4>LoginModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="LoginPatient">
+        <form asp-action="LoginDoctor">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="UserId" class="control-label"></label>
@@ -23,17 +23,13 @@
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Submit" class="btn btn-primary" />
-            </div>
-            <div class="form-group">
-                <br/>
-                <a asp-area="" class="btn btn-primary" asp-controller="Patient" asp-action="CreatePatient">Register</a>
+                <input type="submit" value="Login" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="GetAllPatients">Back to List</a>
+    <a asp-action="FetchAllDoctors">Back to List</a>
 </div>
 
