--- a/Hospital_Management_System/Views/Doctor/RegisterDoc.cshtml
+++ b/Hospital_Management_System/Views/Doctor/RegisterDoc.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "RegisterDoc";
 }
-
+<link rel="stylesheet" href="~/css/Register.css" asp-append-version="true" />
 <h1>RegisterDoc</h1>
 
 <h4>DoctorModel</h4>
@@ -48,10 +48,12 @@
                 <input asp-for="Age" class="form-control" />
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div> *@
+            
             <div class="form-group">
-                <label asp-for="Gender" class="control-label"></label>
-                <input asp-for="Gender" class="form-control" />
-                <span asp-validation-for="Gender" class="text-danger"></span>
+                    <label asp-for="Gender" class="control-label"></label>
+            @Html.RadioButtonFor(m=>m.Gender, "Male") Male
+            @Html.RadioButtonFor(m=>m.Gender, "Female") Female
+                    <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Qualification" class="control-label"></label>
@@ -60,7 +62,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="Specailization" class="control-label"></label>
-                <input asp-for="Specailization" class="form-control" />
+                 <select asp-for="Specailization" class="form-control">
+
+                    <option hidden>--Select--</option>
+                    <option  value="Cardiologist">Cardiologist</option>
+                    <option value="Dermatology">Dermatology</option>
+                    <option value="Psychiatry">Psychiatry</option>
+                    <option value="Surgery">Surgery</option>
+                    <option value="Nephrologists">Nephrologists</option>
+               </select>
                 <span asp-validation-for="Specailization" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -96,6 +106,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="FetchAllDoctors">Back to List</a>
 </div>
 
