--- a/Hospital_Management_System/Views/Patient/UpdatePatient.cshtml
+++ b/Hospital_Management_System/Views/Patient/UpdatePatient.cshtml
@@ -49,7 +49,8 @@
             </div> *@
             <div class="form-group">
                 <label asp-for="Gender" class="control-label"></label>
-                <input asp-for="Gender" class="form-control" />
+                @Html.RadioButtonFor(m => m.Gender, "Male") Male
+                @Html.RadioButtonFor(m => m.Gender, "Female") Female
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
