added styling to all api's and made some modifications accordingly

--- a/Hospital_Management_System/Views/Doctor/FetchByDoctorId.cshtml
+++ b/Hospital_Management_System/Views/Doctor/FetchByDoctorId.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "FetchByDoctorId";
 }
+<link rel="stylesheet" href="~/css/GetById.css" asp-append-version="true" />
 
 <h1>FetchByDoctorId</h1>
 
