--- a/Hospital_Management_System/Views/Doctor/LoginDoctor.cshtml
+++ b/Hospital_Management_System/Views/Doctor/LoginDoctor.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "LoginDoctor";
 }
+<link rel="stylesheet" href="~/css/Login.css" asp-append-version="true" />
 
 <h1>LoginDoctor</h1>
 
@@ -12,17 +13,17 @@
     <div class="col-md-4">
         <form asp-action="LoginDoctor">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <input asp-for="UserId" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="UserId" class="control-label"></label> *@
+                <input asp-for="UserId" placeholder="UserId" class="form-control" />
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="UserName" class="control-label"></label> *@
+                <input asp-for="UserName" placeholder="UserName" class="form-control" />
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-4 mb-4" align="center" >
                 <input type="submit" value="Login" class="btn btn-primary" />
             </div>
         </form>
