--- a/Hospital_Management_System/Views/Patient/GetByPatientId.cshtml
+++ b/Hospital_Management_System/Views/Patient/GetByPatientId.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "GetByPatientId";
 }
 
+<link rel="stylesheet" href="~/css/GetById.css" asp-append-version="true" />
+
 <h1>GetByPatientId</h1>
 
 <div>
