--- a/Hospital_Management_System/Views/Shared/_Layout.cshtml
+++ b/Hospital_Management_System/Views/Shared/_Layout.cshtml
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Hospital_Management_System</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" /> 
+    <link rel="stylesheet" href="~/css/GetAll.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Hospital_Management_System.styles.css" asp-append-version="true" />
 </head>
 <body>
