--- a/Hospital_Management_System/Views/Appointment/CreateAppointment.cshtml
+++ b/Hospital_Management_System/Views/Appointment/CreateAppointment.cshtml
@@ -4,6 +4,7 @@
 @{
     ViewData["Title"] = "CreateAppointment";
 }
+<link rel="stylesheet" href="~/css/CreateAppointment.css" asp-append-version="true" />
 
 <h1>CreateAppointment</h1>
 
@@ -18,38 +19,38 @@
                 <input asp-for="AppointmentId" class="form-control" />
                 <span asp-validation-for="AppointmentId" class="text-danger"></span>
             </div> *@
-            <div class="form-group">
-                <label asp-for="Doctor_Id" class="control-label"></label>
-                <input asp-for="Doctor_Id" class="form-control" value=@Context.Session.GetInt32("Doctor_Id") readonly />
+            <div class="form-group mt-4">
+                @* <label asp-for="Doctor_Id" class="control-label"></label> *@
+                <input asp-for="Doctor_Id" class="form-control" placeholder="Doctor_Id" value=@Context.Session.GetInt32("Doctor_Id") readonly />
                 <span asp-validation-for="Doctor_Id" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="PatientId" class="control-label"></label>
-                <input asp-for="PatientId" class="form-control" value=@Context.Session.GetInt32("PatientId") readonly />
+            <div class="form-group mt-4">
+                @* <label asp-for="PatientId" class="control-label"></label> *@
+                <input asp-for="PatientId" class="form-control" placeholder="PatientId" value=@Context.Session.GetInt32("PatientId") readonly />
                 <span asp-validation-for="PatientId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="AppointmentDate" class="control-label"></label>
-                <input asp-for="AppointmentDate"type="date" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="AppointmentDate" class="control-label"></label> *@
+                <input asp-for="AppointmentDate" type="date" placeholder="AppointmentDate" class="form-control" />
                 <span asp-validation-for="AppointmentDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="StartTime" class="control-label"></label>
-                <input asp-for="StartTime" type="time" class="form-control" />
+            <div class="form-group mt-4">
+                 <label asp-for="StartTime" class="control-label"></label> 
+                <input asp-for="StartTime" type="time" placeholder="StartTime" class="form-control" />
                 <span asp-validation-for="StartTime" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="EndTime" class="control-label"></label>
-                <input asp-for="EndTime" type="time" class="form-control" />
+            <div class="form-group mt-4">
+                 <label asp-for="EndTime" class="control-label"></label> 
+                <input asp-for="EndTime" type="time" placeholder="EndTime" class="form-control" />
                 <span asp-validation-for="EndTime" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Concerns" class="control-label"></label>
-                <input asp-for="Concerns" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="Concerns" class="control-label"></label> *@
+                <input asp-for="Concerns" class="form-control" placeholder="Concerns" />
                 <span asp-validation-for="Concerns" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-4 mb-4" align="center">
+                <input type="submit" value="Create" class="btn btn-warning"  />
             </div>
         </form>
     </div>
