--- a/Hospital_Management_System/Views/Doctor/Delete.cshtml
+++ b/Hospital_Management_System/Views/Doctor/Delete.cshtml
@@ -3,12 +3,13 @@
 @{
     ViewData["Title"] = "Delete";
 }
+<link rel="stylesheet" href="~/css/Delete.css" asp-append-version="true" />
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this</h3>
 <div>
-    <h4>DoctorModel</h4>
+    <h4>DoctorModel?</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
