--- a/Hospital_Management_System/Views/Doctor/RegisterDoc.cshtml
+++ b/Hospital_Management_System/Views/Doctor/RegisterDoc.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "RegisterDoc";
 }
-<link rel="stylesheet" href="~/css/Register.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/RegisterDoctor.css" asp-append-version="true" />
 <h1>RegisterDoc</h1>
 
 <h4>DoctorModel</h4>
@@ -17,30 +17,31 @@
                 <input asp-for="DoctorId" class="form-control" />
                 <span asp-validation-for="DoctorId" class="text-danger"></span>
             </div> *@
-            <div class="form-group">
-                <label asp-for="FullName" class="control-label"></label>
-                <input asp-for="FullName" class="form-control" />
+            <div class="form-group mt-4" >
+
+                @* <label asp-for="FullName" class="control-label"></label> *@
+                <input asp-for="FullName" placeholder="FullName" class="form-control" />
                 <span asp-validation-for="FullName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="Email" class="control-label"></label> *@
+                <input asp-for="Email" placeholder="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             
-            <div class="form-group">
-                <label asp-for="Contact" class="control-label"></label>
-                <input asp-for="Contact" class="form-control" />
+            <div class="form-group mt-4">
+               @*  <label asp-for="Contact" class="control-label"></label> *@
+                <input asp-for="Contact" placeholder="Contact" class="form-control" />
                 <span asp-validation-for="Contact" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="Address" class="control-label"></label> *@
+                <input asp-for="Address" placeholder="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DOB" class="control-label"></label>
-                <input asp-for="DOB" type="date" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="DOB" class="control-label"></label> *@
+                <input asp-for="DOB" type="date" placeholder="DOB" class="form-control" />
                 <span asp-validation-for="DOB" class="text-danger"></span>
             </div>
             @* <div class="form-group">
@@ -49,22 +50,22 @@
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div> *@
             
-            <div class="form-group">
+            <div class="form-group mt-4" >
                     <label asp-for="Gender" class="control-label"></label>
             @Html.RadioButtonFor(m=>m.Gender, "Male") Male
             @Html.RadioButtonFor(m=>m.Gender, "Female") Female
                     <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Qualification" class="control-label"></label>
-                <input asp-for="Qualification" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="Qualification" class="control-label"></label> *@
+                <input asp-for="Qualification" placeholder="Qualification" class="form-control" />
                 <span asp-validation-for="Qualification" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Specailization" class="control-label"></label>
+            <div class="form-group mt-4">
+                @* <label asp-for="Specailization" class="control-label"></label> *@
                  <select asp-for="Specailization" class="form-control">
 
-                    <option hidden>--Select--</option>
+                    <option hidden>-- Select Specailization -- </option>
                     <option  value="Cardiologist">Cardiologist</option>
                     <option value="Dermatology">Dermatology</option>
                     <option value="Psychiatry">Psychiatry</option>
@@ -73,14 +74,14 @@
                </select>
                 <span asp-validation-for="Specailization" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Experience" class="control-label"></label>
-                <input asp-for="Experience" class="form-control" />
+            <div class="form-group mt-4 ">
+                @* <label asp-for="Experience" class="control-label"></label> *@
+                <input asp-for="Experience" placeholder="Experience" class="form-control" />
                 <span asp-validation-for="Experience" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DoctorImage" class="control-label"></label>
-                <input asp-for="DoctorImage" class="form-control" />
+            <div class="form-group mt-4">
+                <label asp-for="DoctorImage" class="control-label"></label> 
+                <input asp-for="DoctorImage" placeholder="DoctorImage" type="file" class="form-control" />
                 <span asp-validation-for="DoctorImage" class="text-danger"></span>
             </div>
            @*  <div class="form-group form-check">
@@ -98,7 +99,7 @@
                 <input asp-for="UpdatedAt" class="form-control" />
                 <span asp-validation-for="UpdatedAt" class="text-danger"></span>
             </div> *@
-            <div class="form-group">
+            <div class="form-group mt-4 mb-4" align="center">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
