--- a/Hospital_Management_System/Views/Patient/DeletePatient.cshtml
+++ b/Hospital_Management_System/Views/Patient/DeletePatient.cshtml
@@ -4,11 +4,13 @@
     ViewData["Title"] = "DeletePatient";
 }
 
+<link rel="stylesheet" href="~/css/Delete.css" asp-append-version="true" />
+
 <h1>DeletePatient</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this</h3>
 <div>
-    <h4>PatientModel</h4>
+    <h4>PatientModel?</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
