--- a/Hospital_Management_System/Views/Patient/LoginPatient.cshtml
+++ b/Hospital_Management_System/Views/Patient/LoginPatient.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "LoginPatient";
 }
+<link rel="stylesheet" href="~/css/LoginPatient.css" asp-append-version="true" />
 
 <h1>LoginPatient</h1>
 
@@ -12,23 +13,21 @@
     <div class="col-md-4">
         <form asp-action="LoginPatient">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <input asp-for="UserId" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="UserId" class="control-label"></label> *@
+                <input asp-for="UserId" placeholder="UserId" class="form-control" />
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="UserName" class="control-label"></label> *@
+                <input asp-for="UserName" placeholder="UserName" class="form-control" />
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Submit" class="btn btn-primary" />
+            <div class="form-group mt-4" align="center">
+                <input type="submit" value="Submit" class="btn btn-primary" /> 
+                <a asp-area="" class="btn btn-primary" asp-controller="Patient" asp-action="RegisterPatient">Register</a>
             </div>
-            <div class="form-group">
-                <br/>
-                <a asp-area="" class="btn btn-primary" asp-controller="Patient" asp-action="CreatePatient">Register</a>
-            </div>
+            
         </form>
     </div>
 </div>
