--- a/Hospital_Management_System/Views/Patient/RegisterPatient.cshtml
+++ b/Hospital_Management_System/Views/Patient/RegisterPatient.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "RegisterPatient";
 }
 
+<link rel="stylesheet" href="~/css/RegisterPatient.css" asp-append-version="true" />
 <h1>RegisterPatient</h1>
 
 <h4>PatientModel</h4>
@@ -17,29 +18,29 @@
                 <input asp-for="PatientId" class="form-control" />
                 <span asp-validation-for="PatientId" class="text-danger"></span>
             </div> *@
-            <div class="form-group">
-                <label asp-for="FullName" class="control-label"></label>
-                <input asp-for="FullName" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="FullName" class="control-label"></label> *@
+                <input asp-for="FullName" placeholder="FullName" class="form-control" />
                 <span asp-validation-for="FullName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="Email" class="control-label"></label> *@
+                <input asp-for="Email" placeholder="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Contact" class="control-label"></label>
-                <input asp-for="Contact" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="Contact" class="control-label"></label> *@
+                <input asp-for="Contact" placeholder="Contact" class="form-control" />
                 <span asp-validation-for="Contact" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="Address" class="control-label"></label> *@
+                <input asp-for="Address" placeholder="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DOB" class="control-label"></label>
-                <input asp-for="DOB" type="date" class="form-control" />
+            <div class="form-group mt-4 ">
+                @* <label asp-for="DOB" class="control-label"></label> *@
+                <input asp-for="DOB" type="date" placeholder="DOB" class="form-control" />
                 <span asp-validation-for="DOB" class="text-danger"></span>
             </div>
            @*  <div class="form-group">
@@ -47,15 +48,15 @@
                 <input asp-for="Age" class="form-control" />
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div> *@
-            <div class="form-group">
-                <label asp-for="Gender" class="control-label"></label>
+            <div class="form-group mt-4">
+                 <label asp-for="Gender" class="control-label"></label> 
                 @Html.RadioButtonFor(m => m.Gender, "Male") Male
                 @Html.RadioButtonFor(m => m.Gender, "Female") Female
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="PatientImage" class="control-label"></label>
-                <input asp-for="PatientImage" class="form-control" />
+            <div class="form-group mt-4">
+                 <label asp-for="PatientImage" class="control-label"></label> 
+                <input asp-for="PatientImage" placeholder="PatientImage"  type="file" class="form-control" />
                 <span asp-validation-for="PatientImage" class="text-danger"></span>
             </div>
            @*  <div class="form-group form-check">
@@ -73,7 +74,7 @@
                 <input asp-for="UpdatedAt" class="form-control" />
                 <span asp-validation-for="UpdatedAt" class="text-danger"></span>
             </div> *@
-            <div class="form-group">
+            <div class="form-group mt-4 mb-4" align="center">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
