--- a/Hospital_Management_System/Views/Patient/UpdatePatient.cshtml
+++ b/Hospital_Management_System/Views/Patient/UpdatePatient.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "UpdatePatient";
 }
+<link rel="stylesheet" href="~/css/Update.css" asp-append-version="true" />
 
 <h1>UpdatePatient</h1>
 
@@ -12,34 +13,34 @@
     <div class="col-md-4">
         <form asp-action="UpdatePatient">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="PatientId" class="control-label"></label>
-                <input asp-for="PatientId" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="PatientId" class="control-label"></label> *@
+                <input asp-for="PatientId" placeholder="PatientId" class="form-control" />
                 <span asp-validation-for="PatientId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="FullName" class="control-label"></label>
-                <input asp-for="FullName" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="FullName" class="control-label"></label> *@
+                <input asp-for="FullName" placeholder="FullName" class="form-control" />
                 <span asp-validation-for="FullName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="Email" class="control-label"></label> *@
+                <input asp-for="Email" placeholder="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Contact" class="control-label"></label>
-                <input asp-for="Contact" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="Contact" class="control-label"></label> *@
+                <input asp-for="Contact" placeholder="Contact" class="form-control" />
                 <span asp-validation-for="Contact" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="Address" class="control-label"></label> *@
+                <input asp-for="Address" placeholder="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="DOB" class="control-label"></label>
-                <input asp-for="DOB" type="date" class="form-control" />
+            <div class="form-group mt-4">
+                @* <label asp-for="DOB" class="control-label"></label> *@
+                <input asp-for="DOB" placeholder="DOB" type="date" class="form-control" />
                 <span asp-validation-for="DOB" class="text-danger"></span>
             </div>
            @*  <div class="form-group">
@@ -47,15 +48,15 @@
                 <input asp-for="Age" class="form-control" />
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div> *@
-            <div class="form-group">
+            <div class="form-group mt-4">
                 <label asp-for="Gender" class="control-label"></label>
                 @Html.RadioButtonFor(m => m.Gender, "Male") Male
                 @Html.RadioButtonFor(m => m.Gender, "Female") Female
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="PatientImage" class="control-label"></label>
-                <input asp-for="PatientImage" class="form-control" />
+            <div class="form-group mt-4">
+                 <label asp-for="PatientImage" class="control-label"></label> 
+                <input asp-for="PatientImage" placeholder="PatientImage" type="file" class="form-control" />
                 <span asp-validation-for="PatientImage" class="text-danger"></span>
             </div>
            @*  <div class="form-group form-check">
@@ -73,7 +74,7 @@
                 <input asp-for="UpdatedAt" class="form-control" />
                 <span asp-validation-for="UpdatedAt" class="text-danger"></span>
             </div> *@
-            <div class="form-group">
+            <div class="form-group mt-4 mb-4" align="center">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
