--- a/Hospital_Management_System/wwwroot/css/Delete.css
+++ b/Hospital_Management_System/wwwroot/css/Delete.css
@@ -3,6 +3,8 @@
     display:flex;
     align-items:center;
     justify-content:center;
-    background-color:aliceblue
-       
+    background-color:dodgerblue;
+}
+h3,h4{
+    color:red;
 }
