--- a/Hospital_Management_System/wwwroot/css/LoginPatient.css
+++ b/Hospital_Management_System/wwwroot/css/LoginPatient.css
@@ -15,6 +15,10 @@
   
 }
 
-form-control {
-    background: rgba(0,0,0,0.3)!important;
+.form-control{
+    background: rgb(255, 255, 255,0.7)!important;
+}
+
+::-ms-input-placeholder { /* Edge 12 -18 */
+    color: red;
 }
